--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,3 +16,10 @@
   }
 }
 
+@layer components {
+  .sidebar-icon {
+    @apply relative flex items-center justify-center
+    h-12 w-12 mx-auto
+  }
+}
+
