--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,10 @@
 }
 
 @layer components {
+  .menu-button {
+    
+  }
+
   .sidebar-icon {
     @apply relative flex items-center justify-center
     h-12 w-12 my-2 mx-auto bg-gray-800 text-red-500 hover:text-green-500 rounded-xl hover:rounded-3xl transition-all duration-200;
