--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,12 @@
 
 @layer components {
   .menu-button {
-    
+    @apply relative flex items-center justify-center
+    h-12 w-12 my-2 mx-auto bg-gray-800 text-blue-500 hover:text-green-500 active:bg-slate-200 rounded-xl hover:rounded-3xl duration-200
+  }
+
+  .menu-icon {
+    @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-red-800 bg-gray-700 text-xs font-bold transition-all scale-0 duration-100;
   }
 
   .sidebar-icon {
