--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@
 @layer components {
   .menu-button {
     @apply relative flex items-center ml-3
-    h-12 w-12 my-2 mx-auto bg-gray-800 text-blue-500 hover:text-green-500 active:bg-slate-200 rounded-xl hover:rounded-3xl duration-200
+    h-12 w-12 my-2 mx-auto bg-gray-800 text-blue-500 hover:text-accent active:bg-slate-200 rounded-xl hover:rounded-3xl duration-200
   }
 
   .menu-icon {
@@ -28,10 +28,10 @@
 
   .sidebar-icon {
     @apply relative flex items-center justify-center
-    h-20 w-20 my-4 mx-auto bg-gray-800 text-red-500 rounded-xl hover:rounded-3xl transition-all duration-200;
+    h-20 w-20 my-4 mx-auto bg-gray-800 text-teal-200 hover:text-accent rounded-xl hover:rounded-3xl transition-all duration-200 ;
   }
   .sidebar-tooltip {
-    @apply absolute w-auto p-4 m-2 min-w-max left-24 rounded-md shadow-md text-yellow-700 bg-gray-700 text-xl font-bold transition-all scale-0 duration-100;
+    @apply absolute w-auto p-4 m-2 min-w-max left-24 rounded-md shadow-md text-teal-200 bg-gray-700 text-xl font-bold transition-all scale-0 duration-100;
   }
 }
 
